Added further improvements to user management.

--- a/NuJournalPro.csproj
+++ b/NuJournalPro.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-NuJournalPro-03967f69-daf3-42ed-a774-bd9f3a937f14</UserSecretsId>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
